k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workplace2slack
  name: workplace2slack
  namespace: workplace2slack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workplace2slack
  template:
    metadata:
      labels:
        app: workplace2slack
    spec:
      containers:
      - name: workplace2slack
        image: docker.dtone.xyz/office/workplace2slack:latest
        ports:
          - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
        - name: registry-workplace2slack
